updated cv + photos

--- a/portfolio.html
+++ b/portfolio.html
@@ -120,7 +120,7 @@
 									<p>Gerne programmiere ich in meiner Freizeit. Über die Jahre sind so ein paar echt nützliche Projekte entstandne. Die ich mal für mich, mal für Familie und Freunde oder nur rein zum Üben programmiert habe.</p>
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/create_vocabTest.png" alt="" /></a>
 											<h3 class="major">Vokabeltest-Ersteller 
 												(<i class="fas fa-database"></i>, <i class="fab fa-python"></i>)</h3>
 											<p>
