update text + structure

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="portfolio.html">Portfolio</a></li>
-								<li><a href="images/Lebenslauf.pdf">Lebenslauf (PDF)</a></li>
+								<li><a href="assets/cv.pdf">Lebenslauf (PDF)</a></li>
 								<li><a href="business.html">Business</a></li>
 								<li><a href="contact.html">Kontakt</a></li>
 							</ul>
@@ -38,8 +38,10 @@
 					<section id="banner">
 						<div class="inner">
 							<div class="logo"><span class="fas fa-user"></span></div>
-							<h2>B. Sc. Gustav Otzen</h2>
-							<p>Hi! Ich bin Gustav und arbeite als Softwareentwickler.</p>
+							<h2>Gustav Otzen</h2>
+							<p>Hi! Ich bin Gustav.
+								Ich programmiere Webanwendungen, Automatisierungsskripte und kleine Tools – 
+								pragmatisch, lösungsorientiert und mit technischem Fokus.</p>
 						</div>
 					</section>
 
@@ -49,17 +51,18 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/strichmaennchen.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="assets/images/pb_cropped.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Über mich</h2>
 										<p>
-											Mein Name ist Gustav Otzen. Ich wurde in der Stadt Schleswig geboren. 
-											Neben meiner Leidenschaft fürs Programmieren und allerlei Technik-Krams 
-											gehe ich sehr gerne ins Gym, auch, um nicht 24/7 vorm PC zu hocken ;)
-											Ich könnte hier noch viel über mich schreiben, doch das würde einfach zu lang werden.
-											Warum guckst du nicht einfach in meinen Lebenslauf?
+											Mein Name ist Gustav Otzen und ich komme aus Schleswig.
+											Neben meiner Leidenschaft für Programmieren und Technik 
+											gehe ich schon seit vielen Jahren gerne ins Fitnessstudio. Hier finde ich auch den perfekten Ausgleich
+											zum Programmieren.
+											Es gibt noch viel mehr zu erzählen, aber dafür ist der Lebenslauf der bessere Ort. 
+											Schau doch einfach dort nach, wenn du mehr erfahren möchtest!
 										</p>
-										<a href="images/Lebenslauf.pdf" class="special">Hier geht's zum Lebenslauf</a>
+										<a href="assets/images/Lebenslauf.pdf" class="special">Hier geht's zum Lebenslauf</a>
 									</div>
 								</div>
 							</section>
@@ -67,27 +70,28 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/informatics.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="assets/images/informatics.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Bekanntschaft mit Informatik</h2>
 										<p>
-											In der 8. Klasse meines Gymnasiums hatte ich damals den Wahlpflichkurs "Technik/Informatik"
-											gewählt, im Nachhinhein die wohl beste Entscheidung meines Lebens. 
-											Wir fingen mit den Grundlagen in Python an und von der ersten Minute an fand Ich
-											Spaß daran, neue Sachen zu programmieren, zu lernen und Algorithmen zu entwickeln.
-											Mein erstes Projekt damals war, wie wohl jeder Programmierer angefangen hat, ein Taschenrechner.
-											Zeit verging und das Abi und damit auch die Frage, was aus mir werden soll, stand vor der Tür. 
-											2020 hat mir mein Vater von "Corona-Checkkarten" erzählt, das sind quasi die damaligen Impf-QR-Codes,
-											nur nicht digital, sondern als Karte fürs Portmonee. 
-											Programme, die sowas erstellen konnten, waren damals sehr teuer. Da mein Vater für seine Apotheke aber trotzdem
-											so etwas haben wollte, fragte er mich, ob ich nicht sowas programiern könnte.
-											Anfangs war ich skeptisch: Mein erstes großes Projekt und ich konnte gerade mal
-											die Basics in Python. 
-											Aber nach langem Grübeln war ich tatsächlich in der Lage, ihm ein vollständiges Programm
-											zu geben, was die ganze Apotheke mit Staunen annahm.
-											Damals war ich so unglaublich stolz auf mich und erkannte, wie viel sich doch mit Informatikbewegen lässt.
-											Seitdem programmiere ich fleißig weitetr, um meine Fähigkeiten zu verbessern und falls du mal reinschauen möchtest,
-											verlinke ich hier mein Github Account :) 
+											In der 8. Klasse meines Gymnasiums entschied ich mich für den Wahlpflichtkurs „Technik/Informatik“ – 
+											eine Entscheidung, die sich im Nachhinein als eine der besten meines Lebens herausstellte. 
+											Wir begannen mit den Grundlagen in Python, und von der ersten Minute an war ich fasziniert, 
+											neue Dinge zu programmieren, zu lernen und Algorithmen zu entwickeln. 
+											Mein erstes Projekt war, wie bei vielen, ein einfacher Taschenrechner.
+											Die Zeit verging, das Abitur stand vor der Tür, und damit die Frage, wie es für mich weitergehen sollte. 
+											2020 erzählte mir mein Vater von den „Corona-Checkkarten“ – praktisch die Impf-QR-Codes von damals, 
+											aber als physische Karte fürs Portemonnaie. 
+											Programme, die so etwas erstellen konnten, waren damals teuer, doch mein Vater wollte so etwas für seine Apotheke. 
+											Er fragte mich, ob ich ein solches Programm schreiben könnte.
+											Zunächst war ich skeptisch – es war mein erstes großes Projekt, 
+											und ich konnte gerade mal die Basics in Python. 
+											Doch nach etwas Überlegen und Tüfteln gelang es mir tatsächlich, 
+											zusammen mit einem Kommilitonen meiner Schwester ein funktionierendes Programm zu entwickeln, 
+											das in seiner Apotheke großes Interesse weckte. Ich war unglaublich stolz auf das Ergebnis und erkannte, 
+											wie viel man mit Informatik erreichen kann.
+											Seitdem programmiere ich kontinuierlich weiter, um meine Fähigkeiten zu verbessern. 
+											Falls du einen Blick auf meine Projekte werfen möchtest, findest du hier den Link zu meinem GitHub-Account.
 										</p>
 										<a href="https://github.com/Gazoooo" class="special">Hier geht's zum Github</a>
 									</div>
@@ -97,16 +101,19 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="https://www.flaticon.com/de/kostenloses-icon/werdegang_858181" class="image"><img src="images/werdegang.png" alt="" /></a>
+									<a href="https://www.flaticon.com/de/kostenloses-icon/werdegang_858181" class="image"><img src="assets/images/werdegang.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Werdegang</h2>
-										<p>Nachdem ich also einige Projekte fertigstellen konnte und (nicht zuletzt durch mein Studium)
-											immer mehr über die Informatik, die Technik dahinter und Programmieren gelernt hatte,
-											war für michg nach meinem akademischen Abschluss an der Universität Osnabrück klar, dass ich Software entwickeln möchte.
-											Schon während des Studiums fing ich an, nebenbei als eine studentische Hilfskraft zu arbeiten und konnte erste wertvolle
-											Einblicke in das Arbeitsleben als Informatiker sammeln: Natürlich viel programmieren, aber auch APIs verwalten, Code dokumentieren
-											oder Internet-Messungen anstellen. Später entschloss ich mich, das alles auch in meinen Hauptjob machen zu wollen.
-											Mehr über mein Business kannst du auf der verlinkten Seite lesen.
+										<p>Nachdem ich bereits einige Projekte abgeschlossen hatte und (nicht zuletzt durch mein Studium) 
+											immer mehr über die Informatik, die dahinterstehende Technik und das Programmieren lernte, 
+											war für mich nach meinem Abschluss an der Universität Osnabrück klar, 
+											dass ich Softwareentwicklung zu meinem Beruf machen möchte.
+											Schon während des Studiums begann ich, als studentische Hilfskraft zu arbeiten,
+											und sammelte erste wertvolle Erfahrungen im Arbeitsalltag eines Informatikers. 
+											Neben dem Programmieren gehörten auch das Verwalten von APIs, 
+											das Dokumentieren von Code und die Durchführung von Internet-Messungen zu meinen Aufgaben. 
+											Später entschloss ich mich, all diese Tätigkeiten in meinem Hauptberuf fortzusetzen.
+											Mehr über mein Business kannst du auf der verlinkten Seite erfahren.
 										</p>
 										<a href="business.html" class="special">Hier geht's zum Business</a>
 									</div>
@@ -117,54 +124,66 @@
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
 									<h2 class="major">Meine Projekte <i class="fas fa-code"></i></h2>
-									<p>Gerne programmiere ich in meiner Freizeit. Über die Jahre sind so ein paar echt nützliche Projekte entstandne. Die ich mal für mich, mal für Familie und Freunde oder nur rein zum Üben programmiert habe.</p>
+									<p>In meiner Freizeit programmiere ich gerne und habe im Laufe der Jahre einige nützliche Projekte entwickelt. 
+										Manche davon habe ich für mich selbst, andere für Familie und Freunde oder einfach zum Üben programmiert.</p>
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/create_vocabTest.png" alt="" /></a>
+											<a href="#" class="image"><img src="assets/images/create_vocabTest.png" alt="" /></a>
 											<h3 class="major">Vokabeltest-Ersteller 
 												(<i class="fas fa-database"></i>, <i class="fab fa-python"></i>)</h3>
 											<p>
-												In der 13. Klasse erfuhr meine Lateinlehrerin durch eine Mitschülerin von meinen 
-												Erfahrungen im Programmieren: Da erzählte sie mir, dass das wöchentliche
-												Auswählen geeigneter Vokabeln mit genau den richtigen Anzahlen von Wortarten und A und B Tests zu fertigen
-												echt anstrengend sei und fragte mich (zunächst scherzhaft), ob ich da nicht was programmieren könnte.
-												Ich fand die Idee interessant und habe was Vergleichartiges noch nie zuvor gesehen,
-												habe damit also gestartet und immer mehr Spaß darin gefunden.
+												In der 13. Klasse erfuhr meine Lateinlehrerin durch eine Mitschülerin 
+												von meinen Programmierkenntnissen. Sie erzählte mir, 
+												dass die wöchentliche Auswahl geeigneter Vokabeln,
+												mit der richtigen Anzahl an Wortarten und passenden A- und B-Tests, sehr anstrengend sei. 
+												Zunächst scherzhaft fragte sie mich, 
+												ob ich nicht eine Lösung dafür programmieren könnte. 
+												Die Idee fand ich spannend – ich hatte so etwas noch nie zuvor gesehen, 
+												also nahm ich die Herausforderung an. 
+												Schnell fand ich immer mehr Freude daran, dieses Projekt zu entwickeln.
 											</p>
 											<a href="https://github.com/Gazoooo/Create_vocabTest" class="special">Projekt auf Github</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/kontaktformular.png" alt="" /></a>
+											<a href="#" class="image"><img src="assets/images/kontaktformular.png" alt="" /></a>
 											<h3 class="major">Kontaktformular 
 												(<i class="fab fa-php"></i>, <i class="fab fa-js"></i>, <i class="fab fa-html5"></i>, <i class="fab fa-css3-alt"></i>)</h3>
 											<p>
-												In meinen Semesterferien erklärte mir mein Vater, dass er schon seit Längerem über 
-												ein Kontakformular für Kunden nacchdenkt, sodass diese ihre Rezepte bequem von zuhause aus 
-												bestellen können. Die IT-Firma, mit der er zusammenarbeitete, wollte allerdings monatlich 100€ für eine solche Website und
-												deren Instandhaltung. Deswegen und wegen der Möglichkeit, viel Neues zu lernen, sagte ich, dass ich mich gerne dran versuchen würde und mit dem Endergebnis waren wir sehr zufireden.
-												Er erzählte mir noch Wochen später von überraschten Kunden, die gar nicht glauben konnten, dass Rezepte bestellen so einfach sein kann.</p>
+												In meinen Semesterferien erklärte mir mein Vater, 
+												dass er schon seit Längerem über ein Kontaktformular für Kunden nachdenkt, 
+												damit diese ihre Rezepte bequem von zuhause aus bestellen können. 
+												Die IT-Firma, mit der er zusammenarbeitete, 
+												wollte allerdings für eine solche Website und deren Instandhaltung 
+												eine - nicht gerade niedrige - monatliche Gebühr. 
+												Wegen der hohen Kosten und der Möglichkeit, viel Neues zu lernen, 
+												sagte ich, dass ich mich gerne daran versuchen würde. Mit dem Endergebnis waren wir sehr zufrieden. 
+												Wochen später erzählte mir mein Vater von überraschten Kunden, die kaum glauben konnten, 
+												wie einfach es war, Rezepte zu bestellen.</p>
 											<a href="https://github.com/Gazoooo/form_AltstadtApo" class="special">Projekt auf Github</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="assets/images/pic06.jpg" alt="" /></a>
 											<h3 class="major">Pflanzen vs. Zombies
 												(<i class="fab fa-cuttlefish"></i><i class="fas fa-plus"></i><i class="fas fa-plus"></i>)</h3>
 											<p>
-												Für unser allererstes Projekt im 1. Semester durften wir uns damals zwischen 5 verschieden Ideen aussuchen,
-												was wir nachprogrammieren wollten. Da meine Geschwister und ich früher in den Sommerferien stundenlang zusammensaßen 
-												und Pflanzen vs. Zombies gespielt haben, fiel mir die Entscheidung recht einfach.
+												Für unser erstes Projekt im 1. Semester durften wir uns aus fünf verschiedenen Ideen aussuchen, 
+												was wir nachprogrammieren wollten. 
+												Da meine Geschwister und ich in den Sommerferien oft stundenlang zusammen 
+												„Pflanzen vs. Zombies“ gespielt haben, 
+												fiel mir die Entscheidung ziemlich leicht.
 											</p>
 											<a href="https://github.com/Gazoooo/PvZ" class="special">Projekt auf Github</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="assets/images/pic07.jpg" alt="" /></a>
 											<h3 class="major">Trainingsplan-Ersteller
 												(<i class="fas fa-database"></i>, <i class="fab fa-python"></i>)</h3>
 											<p>
-												Einer meiner größten Hobbys ist und bleibt das Kraftaining.
-												Nur störte mich, bei jedem neuen Trainingsplan Ewigkeiten Youtube nach Übungen, die ich schon längst
-												wieder vergessen hatte, zu durchforsten und meine geschafften Gewichte zu übertragen. Da sah ich ein cooles
-												Freizeit-Projekt drin, diese Aufgaben zu automatisieren.
+												Eines meiner größten Hobbys ist und bleibt das Krafttraining. 
+												Es störte mich jedoch, bei jedem neuen Trainingsplan 
+												immer wieder Ewigkeiten auf YouTube nach Übungen zu suchen, 
+												die ich längst wieder vergessen hatte, und meine erreichten Gewichte manuell zu übertragen. 
+												Da kam mir die Idee, dieses Problem als Freizeitprojekt zu automatisieren.
 											</p>
 											<a href="https://github.com/Gazoooo/TP_creator" class="special">Projekt auf Github</a>
 										</article>
