--- a/business.html
+++ b/business.html
@@ -39,7 +39,7 @@
 						<div class="inner">
 							<div class="logo"><span class="fas fa-briefcase"></span></div>
 							<h2>Business</h2>
-							<p>Hab keins lol.</p>
+							<p>Hab keins.</p>
 						</div>
 					</section>
 
