--- a/contact.html
+++ b/contact.html
@@ -41,37 +41,34 @@
 						<p>
 							Hast du eine Frage oder ist irgendwas unklar? 
 							Dann melde dich gerne bei mir! Entweder über meine Social Media Links 
-							oder ganz bequem über das untenstehende Formular.</p>
-						<form method="post" action="#">
-							<div class="fields">
-								<div class="field">
-									<label for="name">Name</label>
-									<input type="text" name="name" id="name" />
+							oder ganz bequem über das untenstehende Formular. </p>
+							<form method="post" action="#">
+								<p class="warning-text" style="color: red; text-align: center;">Dieses Formular funktioniert momentan nicht. 
+									Bitte benutze eine andere Kontaktmöglichkeit.</p>
+								<div class="fields">
+									<div class="field">
+										<label for="name">Name</label>
+										<input type="text" name="name" id="name" disabled />
+									</div>
+									<div class="field">
+										<label for="email">Email</label>
+										<input type="email" name="email" id="email" disabled />
+									</div>
+									<div class="field">
+										<label for="message">Message</label>
+										<textarea name="message" id="message" rows="4" disabled></textarea>
+									</div>
 								</div>
-								<div class="field">
-									<label for="email">Email</label>
-									<input type="email" name="email" id="email" />
-								</div>
-								<div class="field">
-									<label for="message">Message</label>
-									<textarea name="message" id="message" rows="4"></textarea>
-								</div>
-							</div>
-							<ul class="actions">
-								<li><input type="submit" value="Send Message" /></li>
-							</ul>
-						</form>
+								<ul class="actions">
+									<li><input type="submit" value="Send Message" disabled /></li>
+								</ul>
+							</form>
+							
 						<ul class="contact">
-							<li class="icon solid fa-home">
-								TODO<br />
-								Adresse<br />
-								Ort
-							</li>
-							<li class="icon solid fa-phone">TODO</li>
 							<li class="icon solid fa-envelope"><a href="mailto:gustav@otzen.de">gustav@otzen.de</a></li>
-							<li class="icon brands fa-twitter"><a href="#">TODO</a></li>
+							<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/gustav-otzen-66a392364/">Mein LinkedIn</a></li>
+							<li class="icon brands fa-github"><a href="https://github.com/Gazoooo"> Meine Github </a>
 							<li class="icon brands fa-instagram"><a href="#">TODO</a></li>
-							<li class="icon brands fa-github"><a href="https://github.com/Gazoooo?tab=repositories"> Meine Projekte </a>
 						</ul>
 						<ul class="copyright">
 							<li>&copy; Gustav Otzen. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
