--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
 						<h2>Menu</h2>
 						<ul class="links">
 							<li><a href="portfolio.html">Portfolio</a></li>
-							<li><a href="images/Lebenslauf.pdf">Lebenslauf (PDF)</a></li>
+							<li><a href="assets/cv.pdf">Lebenslauf (PDF)</a></li>
 							<li><a href="business.html">Business</a></li>
 							<li><a href="contact.html">Kontakt</a></li>
 						</ul>
