--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <h2>Menu</h2>
                         <ul class="links">
                             <li><a href="portfolio.html">Portfolio</a></li>
-                            <li><a href="images/Lebenslauf.pdf">Lebenslauf (PDF)</a></li>
+                            <li><a href="assets/cv.pdf">Lebenslauf (PDF)</a></li>
                             <li><a href="business.html">Business</a></li>
                             <li><a href="contact.html">Kontakt</a></li>
                         </ul>
@@ -38,7 +38,8 @@
 				<!-- Content -->
 					<div class="wrapper">
 						<div class="inner">
-                            Hier entsteht eine Homepage von Gustav Otzen. Momentan exisitert leider nur eine Portfolio Website von mir. Falls du nicht automatisch weitergeleitet wirst, <a href="portfolio.html">klicke hier</a>.
+                            Hier entsteht eine Homepage von Gustav Otzen. Momentan existiert nur eine Portfolio Website von mir. 
+							Falls du nicht automatisch weitergeleitet wirst, <a href="portfolio.html">klicke hier</a>.
 						</div>
 					</div>
 
