--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
 		<title>Kontakt</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="icon" href="assets/images/address-card-solid.svg" type="image/svg+xml">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
@@ -65,10 +66,9 @@
 							</form>
 							
 						<ul class="contact">
-							<li class="icon solid fa-envelope"><a href="mailto:gustav@otzen.de">gustav@otzen.de</a></li>
-							<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/gustav-otzen-66a392364/">Mein LinkedIn</a></li>
-							<li class="icon brands fa-github"><a href="https://github.com/Gazoooo"> Meine Github </a>
-							<li class="icon brands fa-instagram"><a href="#">TODO</a></li>
+							<li class="icon solid fa-envelope"><a href="mailto:gustav@otzen.de">Per Mail</a></li>
+							<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/gustav-otzen">Per LinkedIn</a></li>
+							<li class="icon brands fa-github"><a href="https://github.com/Gazoooo"> Per Github </a>
 						</ul>
 						<ul class="copyright">
 							<li>&copy; Gustav Otzen. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
