--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,7 @@
 		<title>Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="icon" href="assets/images/code-solid.svg" type="image/svg+xml">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
@@ -199,7 +200,7 @@
 			<!-- Footer -->
 			<section id="footer">
 				<div class="inner">
-					<p>Vielen Dank, dass du dir mein Portfolio durchgelesen hast! Kontakieren kannst du mich <a href="contact.html"> hier</a>.</p>
+					<p>Vielen Dank, dass du dir mein Portfolio durchgelesen hast! Kontaktieren kannst du mich <a href="contact.html"> hier</a>.</p>
 					<ul class="copyright">
 						<li>&copy; Gustav Otzen. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
