edited text for business

--- a/business.html
+++ b/business.html
@@ -40,7 +40,7 @@
 						<div class="inner">
 							<div class="logo"><span class="fas fa-briefcase"></span></div>
 							<h2>Business</h2>
-							<p>Hab keins.</p>
+							<p>Aktuell bin ich Student – aber offen für spannende berufliche Herausforderungen und Projekte.</p>
 						</div>
 					</section>
 
@@ -51,11 +51,15 @@
 							<div class="wrapper">
 								<div class="inner">
 
-									<h3 class="major">Hier könnt was stehen</h3>
-									<p>TODO</p>
-
-									<h3 class="major">Oder hier</h3>
-									<p>TODO</p>
+									<h3 class="major">Was ich anbiete & wo ich hin will</h3>
+									<p>Als Student bringe ich aktuelles Wissen aus dem Studium mit und arbeite leidenschaftlich gern an praxisnahen Projekten 
+										– insbesondere in den Bereichen der Datenanalyse und Automatisierung mit Python.
+										Auch wenn ich durch mein Studium zeitlich eingeschränkt bin, bin ich offen für 
+										kleinere Projekte, Kooperationen oder spannende Herausforderungen, 
+										bei denen ich mein Wissen erweitern und anwenden kann.
+										Langfristig strebe ich eine berufliche Laufbahn in der Softwareentwicklung an 
+										– idealerweise in einem innovativen Umfeld, 
+										in dem ich Verantwortung übernehmen und kreative Lösungen entwickeln kann.</p>
 
 									
                 <!-- Footer -->
