added new projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -163,30 +163,33 @@
 											<a href="https://github.com/Gazoooo/form_AltstadtApo" class="special">Projekt auf Github</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="assets/images/pic06.jpg" alt="" /></a>
-											<h3 class="major">Pflanzen vs. Zombies
-												(<i class="fab fa-cuttlefish"></i><i class="fas fa-plus"></i><i class="fas fa-plus"></i>)</h3>
+											<a href="#" class="image"><img src="assets/images/backup.png" alt="" /></a>
+											<h3 class="major">Automatisierte Backups 
+												(<i class="fas fa-terminal"></i>, <i class="fab fa-python"></i>)</h3>
 											<p>
-												Für unser erstes Projekt im 1. Semester durften wir uns aus fünf verschiedenen Ideen aussuchen, 
-												was wir nachprogrammieren wollten. 
-												Da meine Geschwister und ich in den Sommerferien oft stundenlang zusammen 
-												„Pflanzen vs. Zombies“ gespielt haben, 
-												fiel mir die Entscheidung ziemlich leicht.
+												Da Datensicherung für mich ein wichtiges Thema ist, 
+												ich jedoch oft zu bequem war, sie regelmäßig manuell durchzuführen, 
+												habe ich ein Skript entwickelt, das diesen Prozess automatisiert.
+												Besonders wichtig war mir dabei, 
+												dass die Backups im Alltag mit minimalem Aufwand funktionieren.
+												Da ich sowohl unter Windows als auch Linux arbeite, 
+												habe ich das Projekt von Anfang an plattformübergreifend konzipiert.
 											</p>
-											<a href="https://github.com/Gazoooo/PvZ" class="special">Projekt auf Github</a>
+											<a href="https://github.com/Gazoooo/backup" class="special">Projekt auf Github</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="assets/images/pic07.jpg" alt="" /></a>
-											<h3 class="major">Trainingsplan-Ersteller
-												(<i class="fas fa-database"></i>, <i class="fab fa-python"></i>)</h3>
+											<a href="#" class="image"><img src="assets/images/arduinoDrawer.png" alt="" /></a>
+											<h3 class="major">Arduino-Zeichner
+												(<i class="fab fa-html5" title="HTML5"></i>, <i class="fab fa-css3-alt" title="CSS3"></i>, <i class="fab fa-js" title="JavaScript"></i>)</h3>
 											<p>
-												Eines meiner größten Hobbys ist und bleibt das Krafttraining. 
-												Es störte mich jedoch, bei jedem neuen Trainingsplan 
-												immer wieder Ewigkeiten auf YouTube nach Übungen zu suchen, 
-												die ich längst wieder vergessen hatte, und meine erreichten Gewichte manuell zu übertragen. 
-												Da kam mir die Idee, dieses Problem als Freizeitprojekt zu automatisieren.
+												Im Rahmen meines Programmierpraktikums an der Universität 
+												habe ich in einer kleinen Gruppe ein vollständiges Softwareprojekt entwickelt,
+												wo ein Arduino per Motoren gesteuert ein Bild auf einem Whiteboard
+												zeichnen sollte.
+												Das Ziel meiner Gruppe war es, eine Simulation zu erstellen, 
+												die die benötigten Algorithmen effizient implementiert und testbar macht. 
 											</p>
-											<a href="https://github.com/Gazoooo/TP_creator" class="special">Projekt auf Github</a>
+											<a href="https://github.com/Gazoooo/Programmierpraktikum" class="special">Projekt auf Github</a>
 										</article>
 									</section>
 									<ul class="actions">
