--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="portfolio.html">Portfolio</a></li>
-								<li><a href="assets/cv.pdf">Lebenslauf (PDF)</a></li>
+								<li><a href="assets/CV_public.pdf">Lebenslauf (PDF)</a></li>
 								<li><a href="business.html">Business</a></li>
 								<li><a href="contact.html">Kontakt</a></li>
 							</ul>
