update business text

--- a/portfolio.html
+++ b/portfolio.html
@@ -63,7 +63,7 @@
 											Es gibt noch viel mehr zu erzählen, aber dafür ist der Lebenslauf der bessere Ort. 
 											Schau doch einfach dort nach, wenn du mehr erfahren möchtest!
 										</p>
-										<a href="assets/images/Lebenslauf.pdf" class="special">Hier geht's zum Lebenslauf</a>
+										<a href="assets/CV_public.pdf" class="special">Hier geht's zum Lebenslauf</a>
 									</div>
 								</div>
 							</section>
@@ -105,16 +105,16 @@
 									<a href="https://www.flaticon.com/de/kostenloses-icon/werdegang_858181" class="image"><img src="assets/images/werdegang.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Werdegang</h2>
-										<p>Nachdem ich bereits einige Projekte abgeschlossen hatte und (nicht zuletzt durch mein Studium) 
-											immer mehr über die Informatik, die dahinterstehende Technik und das Programmieren lernte, 
-											war für mich nach meinem Abschluss an der Universität Osnabrück klar, 
-											dass ich Softwareentwicklung zu meinem Beruf machen möchte.
-											Schon während des Studiums begann ich, als studentische Hilfskraft zu arbeiten,
-											und sammelte erste wertvolle Erfahrungen im Arbeitsalltag eines Informatikers. 
-											Neben dem Programmieren gehörten auch das Verwalten von APIs, 
-											das Dokumentieren von Code und die Durchführung von Internet-Messungen zu meinen Aufgaben. 
-											Später entschloss ich mich, all diese Tätigkeiten in meinem Hauptberuf fortzusetzen.
-											Mehr über mein Business kannst du auf der verlinkten Seite erfahren.
+										<p> Nachdem ich bereits an mehreren Projekten gearbeitet habe und 
+											durch mein Studium an der Universität Osnabrück stetig tiefer 
+											in die Welt der Informatik und Softwareentwicklung eintauche, 
+											steht für mich fest: Ich möchte meine Zukunft in der Softwareentwicklung gestalten.
+											Schon während des Studiums arbeite ich als studentische Hilfskraft 
+											und sammle dabei praxisnahe Erfahrungen – von der Programmierung über die Arbeit 
+											mit APIs bis hin zur technischen Dokumentation und der Durchführung von Internet-Messungen.
+											Diese Einblicke motivieren mich, mein Wissen kontinuierlich auszubauen 
+											und es in spannenden Projekten einzusetzen.
+											Mehr über meine Perspektive findest du auf dieser Seite.
 										</p>
 										<a href="business.html" class="special">Hier geht's zum Business</a>
 									</div>
